// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducer should add a category 1`] = `
"- Expected
+ Received

  Object {
    "settings": Object {
      "abilityCategories": "",
      "combatAbilities": Array [],
      "customThemePath": "",
      "debugTranslations": false,
      "defaultThemeName": "",
      "equipmentCategories": Object {
        "category0": Object {
          "fields": Object {
            "field0": Object {
              "default": "default value",
              "name": "Initial field",
              "type": "string",
            },
            "field1": Object {
              "default": "default value",
              "name": "Initial field",
              "type": "string",
            },
          },
          "name": "initial category",
        },
        "category1": Object {
          "fields": Object {},
          "name": "initial category",
        },
+       "id0": Object {
+         "fields": Object {},
+         "name": "New category",
+       },
      },
      "generalAbilityCategories": Array [],
      "genericOccupation": "",
      "investigativeAbilityCategories": Array [],
      "longNotes": Array [],
      "migrationFlags": Object {
        "actor": Object {},
        "compendium": Object {},
        "item": Object {},
        "journal": Object {},
        "macro": Object {},
        "playlist": Object {},
        "rollTable": Object {},
        "scene": Object {},
        "world": Object {},
      },
      "mwHiddenShortNotes": Array [],
      "mwUseAlternativeItemTypes": false,
      "newNPCPacks": Array [],
      "newPCPacks": Array [],
      "npcStats": Object {
        "npcStat0": Object {
          "default": 3,
          "max": 10,
          "min": 0,
          "name": "NPC Statisitic Zero",
        },
      },
      "occupationLabel": "",
      "pcStats": Object {
        "pcStat0": Object {
          "default": 3,
          "max": 10,
          "min": 0,
          "name": "PC Statisitic Zero",
        },
      },
      "personalDetails": Array [],
      "shortNotes": Array [],
      "showEmptyInvestigativeCategories": false,
      "systemMigrationVersion": "",
      "systemPreset": "dnd5e",
      "useBoost": false,
      "useMwInjuryStatus": false,
      "useMwStyleAbilities": false,
      "useNpcCombatBonuses": false,
      "useTurnPassingInitiative": false,
    },
  }"
`;

exports[`reducer should add a field 1`] = `
"- Expected
+ Received

  Object {
    "settings": Object {
      "abilityCategories": "",
      "combatAbilities": Array [],
      "customThemePath": "",
      "debugTranslations": false,
      "defaultThemeName": "",
      "equipmentCategories": Object {
        "category0": Object {
          "fields": Object {
            "field0": Object {
              "default": "default value",
              "name": "Initial field",
              "type": "string",
            },
            "field1": Object {
              "default": "default value",
              "name": "Initial field",
              "type": "string",
            },
+           "id1": Object {
+             "default": "",
+             "name": "New Field",
+             "type": "string",
+           },
          },
          "name": "initial category",
        },
        "category1": Object {
          "fields": Object {},
          "name": "initial category",
        },
      },
      "generalAbilityCategories": Array [],
      "genericOccupation": "",
      "investigativeAbilityCategories": Array [],
      "longNotes": Array [],
      "migrationFlags": Object {
        "actor": Object {},
        "compendium": Object {},
        "item": Object {},
        "journal": Object {},
        "macro": Object {},
        "playlist": Object {},
        "rollTable": Object {},
        "scene": Object {},
        "world": Object {},
      },
      "mwHiddenShortNotes": Array [],
      "mwUseAlternativeItemTypes": false,
      "newNPCPacks": Array [],
      "newPCPacks": Array [],
      "npcStats": Object {
        "npcStat0": Object {
          "default": 3,
          "max": 10,
          "min": 0,
          "name": "NPC Statisitic Zero",
        },
      },
      "occupationLabel": "",
      "pcStats": Object {
        "pcStat0": Object {
          "default": 3,
          "max": 10,
          "min": 0,
          "name": "PC Statisitic Zero",
        },
      },
      "personalDetails": Array [],
      "shortNotes": Array [],
      "showEmptyInvestigativeCategories": false,
      "systemMigrationVersion": "",
      "systemPreset": "dnd5e",
      "useBoost": false,
      "useMwInjuryStatus": false,
      "useMwStyleAbilities": false,
      "useNpcCombatBonuses": false,
      "useTurnPassingInitiative": false,
    },
  }"
`;

exports[`reducer should add a stat 1`] = `
"- Expected
+ Received

  Object {
    "settings": Object {
      "abilityCategories": "",
      "combatAbilities": Array [],
      "customThemePath": "",
      "debugTranslations": false,
      "defaultThemeName": "",
      "equipmentCategories": Object {
        "category0": Object {
          "fields": Object {
            "field0": Object {
              "default": "default value",
              "name": "Initial field",
              "type": "string",
            },
            "field1": Object {
              "default": "default value",
              "name": "Initial field",
              "type": "string",
            },
          },
          "name": "initial category",
        },
        "category1": Object {
          "fields": Object {},
          "name": "initial category",
        },
      },
      "generalAbilityCategories": Array [],
      "genericOccupation": "",
      "investigativeAbilityCategories": Array [],
      "longNotes": Array [],
      "migrationFlags": Object {
        "actor": Object {},
        "compendium": Object {},
        "item": Object {},
        "journal": Object {},
        "macro": Object {},
        "playlist": Object {},
        "rollTable": Object {},
        "scene": Object {},
        "world": Object {},
      },
      "mwHiddenShortNotes": Array [],
      "mwUseAlternativeItemTypes": false,
      "newNPCPacks": Array [],
      "newPCPacks": Array [],
      "npcStats": Object {
        "npcStat0": Object {
          "default": 3,
          "max": 10,
          "min": 0,
          "name": "NPC Statisitic Zero",
        },
      },
      "occupationLabel": "",
      "pcStats": Object {
        "pcStat0": Object {
          "default": 3,
          "max": 10,
          "min": 0,
          "name": "PC Statisitic Zero",
        },
+       "stat1": Object {
+         "default": 0,
+         "name": "",
+       },
      },
      "personalDetails": Array [],
      "shortNotes": Array [],
      "showEmptyInvestigativeCategories": false,
      "systemMigrationVersion": "",
      "systemPreset": "dnd5e",
      "useBoost": false,
      "useMwInjuryStatus": false,
      "useMwStyleAbilities": false,
      "useNpcCombatBonuses": false,
      "useTurnPassingInitiative": false,
    },
  }"
`;

exports[`reducer should apply a preset 1`] = `
"- Expected
+ Received

  Object {
    "settings": Object {
      "abilityCategories": "",
-     "combatAbilities": Array [],
+     "combatAbilities": Array [
+       "Scuffling",
+       "Weapons",
+       "Firearms",
+       "Athletics",
+     ],
      "customThemePath": "",
      "debugTranslations": false,
-     "defaultThemeName": "",
+     "defaultThemeName": "tealTheme",
+     "displayName": "Path of Cthulhu",
      "equipmentCategories": Object {
-       "category0": Object {
-         "fields": Object {
-           "field0": Object {
-             "default": "default value",
-             "name": "Initial field",
-             "type": "string",
-           },
-           "field1": Object {
-             "default": "default value",
-             "name": "Initial field",
-             "type": "string",
-           },
-         },
-         "name": "initial category",
-       },
-       "category1": Object {
+       "general": Object {
          "fields": Object {},
-         "name": "initial category",
+         "name": "General",
        },
      },
-     "generalAbilityCategories": Array [],
-     "genericOccupation": "",
-     "investigativeAbilityCategories": Array [],
-     "longNotes": Array [],
+     "generalAbilityCategories": Array [
+       "General",
+     ],
+     "genericOccupation": "Investigator",
+     "investigativeAbilityCategories": Array [
+       "Academic",
+       "Interpersonal",
+       "Technical",
+     ],
+     "longNotes": Array [
+       "Notes, Contacts etc.",
+       "Occupational Benefits",
+       "Pillars of Sanity",
+       "Sources of Stability",
+     ],
      "migrationFlags": Object {
        "actor": Object {},
        "compendium": Object {},
        "item": Object {},
        "journal": Object {},
        "macro": Object {},
        "playlist": Object {},
        "rollTable": Object {},
        "scene": Object {},
        "world": Object {},
      },
      "mwHiddenShortNotes": Array [],
      "mwUseAlternativeItemTypes": false,
-     "newNPCPacks": Array [],
-     "newPCPacks": Array [],
+     "newNPCPacks": Array [
+       "investigator.opponentAbilities",
+     ],
+     "newPCPacks": Array [
+       "investigator.pathOfCthulhuAbilities",
+     ],
      "npcStats": Object {
-       "npcStat0": Object {
+       "alertness": Object {
+         "default": 0,
+         "name": "Alertness",
+       },
+       "armor": Object {
+         "default": 0,
+         "name": "Armor",
+       },
+       "hitThreshold": Object {
          "default": 3,
-         "max": 10,
-         "min": 0,
-         "name": "NPC Statisitic Zero",
+         "name": "Hit threshold",
+       },
+       "stabilityLoss": Object {
+         "default": 0,
+         "name": "Stability Loss",
+       },
+       "stealth": Object {
+         "default": 0,
+         "name": "Stealth",
        },
      },
-     "occupationLabel": "",
+     "occupationLabel": "Occupation",
      "pcStats": Object {
-       "pcStat0": Object {
+       "hitThreshold": Object {
          "default": 3,
-         "max": 10,
-         "min": 0,
-         "name": "PC Statisitic Zero",
+         "name": "Hit threshold",
+       },
      },
+     "personalDetails": Array [
+       Object {
+         "name": "Drive",
+         "type": "item",
        },
-     "personalDetails": Array [],
+     ],
+     "schemaVersion": "v1",
      "shortNotes": Array [],
      "showEmptyInvestigativeCategories": false,
      "systemMigrationVersion": "",
-     "systemPreset": "dnd5e",
+     "systemPreset": "pathOfCthulhu",
      "useBoost": false,
      "useMwInjuryStatus": false,
      "useMwStyleAbilities": false,
      "useNpcCombatBonuses": false,
      "useTurnPassingInitiative": false,
    },
  }"
`;

exports[`reducer should change a category id 1`] = `
"- Expected
+ Received

  Object {
    "settings": Object {
      "abilityCategories": "",
      "combatAbilities": Array [],
      "customThemePath": "",
      "debugTranslations": false,
      "defaultThemeName": "",
      "equipmentCategories": Object {
-       "category0": Object {
+       "category1": Object {
+         "fields": Object {},
+         "name": "initial category",
+       },
+       "foo": Object {
          "fields": Object {
            "field0": Object {
              "default": "default value",
              "name": "Initial field",
              "type": "string",
            },
            "field1": Object {
              "default": "default value",
              "name": "Initial field",
              "type": "string",
            },
          },
-         "name": "initial category",
-       },
-       "category1": Object {
-         "fields": Object {},
          "name": "initial category",
        },
      },
      "generalAbilityCategories": Array [],
      "genericOccupation": "",
      "investigativeAbilityCategories": Array [],
      "longNotes": Array [],
      "migrationFlags": Object {
        "actor": Object {},
        "compendium": Object {},
        "item": Object {},
        "journal": Object {},
        "macro": Object {},
        "playlist": Object {},
        "rollTable": Object {},
        "scene": Object {},
        "world": Object {},
      },
      "mwHiddenShortNotes": Array [],
      "mwUseAlternativeItemTypes": false,
      "newNPCPacks": Array [],
      "newPCPacks": Array [],
      "npcStats": Object {
        "npcStat0": Object {
          "default": 3,
          "max": 10,
          "min": 0,
          "name": "NPC Statisitic Zero",
        },
      },
      "occupationLabel": "",
      "pcStats": Object {
        "pcStat0": Object {
          "default": 3,
          "max": 10,
          "min": 0,
          "name": "PC Statisitic Zero",
        },
      },
      "personalDetails": Array [],
      "shortNotes": Array [],
      "showEmptyInvestigativeCategories": false,
      "systemMigrationVersion": "",
      "systemPreset": "dnd5e",
      "useBoost": false,
      "useMwInjuryStatus": false,
      "useMwStyleAbilities": false,
      "useNpcCombatBonuses": false,
      "useTurnPassingInitiative": false,
    },
  }"
`;

exports[`reducer should change a field id 1`] = `
"- Expected
+ Received

  Object {
    "settings": Object {
      "abilityCategories": "",
      "combatAbilities": Array [],
      "customThemePath": "",
      "debugTranslations": false,
      "defaultThemeName": "",
      "equipmentCategories": Object {
        "category0": Object {
          "fields": Object {
            "field0": Object {
              "default": "default value",
              "name": "Initial field",
              "type": "string",
            },
-           "field1": Object {
+           "foo": Object {
              "default": "default value",
              "name": "Initial field",
              "type": "string",
            },
          },
          "name": "initial category",
        },
        "category1": Object {
          "fields": Object {},
          "name": "initial category",
        },
      },
      "generalAbilityCategories": Array [],
      "genericOccupation": "",
      "investigativeAbilityCategories": Array [],
      "longNotes": Array [],
      "migrationFlags": Object {
        "actor": Object {},
        "compendium": Object {},
        "item": Object {},
        "journal": Object {},
        "macro": Object {},
        "playlist": Object {},
        "rollTable": Object {},
        "scene": Object {},
        "world": Object {},
      },
      "mwHiddenShortNotes": Array [],
      "mwUseAlternativeItemTypes": false,
      "newNPCPacks": Array [],
      "newPCPacks": Array [],
      "npcStats": Object {
        "npcStat0": Object {
          "default": 3,
          "max": 10,
          "min": 0,
          "name": "NPC Statisitic Zero",
        },
      },
      "occupationLabel": "",
      "pcStats": Object {
        "pcStat0": Object {
          "default": 3,
          "max": 10,
          "min": 0,
          "name": "PC Statisitic Zero",
        },
      },
      "personalDetails": Array [],
      "shortNotes": Array [],
      "showEmptyInvestigativeCategories": false,
      "systemMigrationVersion": "",
      "systemPreset": "dnd5e",
      "useBoost": false,
      "useMwInjuryStatus": false,
      "useMwStyleAbilities": false,
      "useNpcCombatBonuses": false,
      "useTurnPassingInitiative": false,
    },
  }"
`;

exports[`reducer should delete a category 1`] = `
"- Expected
+ Received

  Object {
    "settings": Object {
      "abilityCategories": "",
      "combatAbilities": Array [],
      "customThemePath": "",
      "debugTranslations": false,
      "defaultThemeName": "",
      "equipmentCategories": Object {
-       "category0": Object {
-         "fields": Object {
-           "field0": Object {
-             "default": "default value",
-             "name": "Initial field",
-             "type": "string",
-           },
-           "field1": Object {
-             "default": "default value",
-             "name": "Initial field",
-             "type": "string",
-           },
-         },
-         "name": "initial category",
-       },
        "category1": Object {
          "fields": Object {},
          "name": "initial category",
        },
      },
      "generalAbilityCategories": Array [],
      "genericOccupation": "",
      "investigativeAbilityCategories": Array [],
      "longNotes": Array [],
      "migrationFlags": Object {
        "actor": Object {},
        "compendium": Object {},
        "item": Object {},
        "journal": Object {},
        "macro": Object {},
        "playlist": Object {},
        "rollTable": Object {},
        "scene": Object {},
        "world": Object {},
      },
      "mwHiddenShortNotes": Array [],
      "mwUseAlternativeItemTypes": false,
      "newNPCPacks": Array [],
      "newPCPacks": Array [],
      "npcStats": Object {
        "npcStat0": Object {
          "default": 3,
          "max": 10,
          "min": 0,
          "name": "NPC Statisitic Zero",
        },
      },
      "occupationLabel": "",
      "pcStats": Object {
        "pcStat0": Object {
          "default": 3,
          "max": 10,
          "min": 0,
          "name": "PC Statisitic Zero",
        },
      },
      "personalDetails": Array [],
      "shortNotes": Array [],
      "showEmptyInvestigativeCategories": false,
      "systemMigrationVersion": "",
      "systemPreset": "dnd5e",
      "useBoost": false,
      "useMwInjuryStatus": false,
      "useMwStyleAbilities": false,
      "useNpcCombatBonuses": false,
      "useTurnPassingInitiative": false,
    },
  }"
`;

exports[`reducer should delete a field 1`] = `
"- Expected
+ Received

  Object {
    "settings": Object {
      "abilityCategories": "",
      "combatAbilities": Array [],
      "customThemePath": "",
      "debugTranslations": false,
      "defaultThemeName": "",
      "equipmentCategories": Object {
        "category0": Object {
          "fields": Object {
-           "field0": Object {
-             "default": "default value",
-             "name": "Initial field",
-             "type": "string",
-           },
            "field1": Object {
              "default": "default value",
              "name": "Initial field",
              "type": "string",
            },
          },
          "name": "initial category",
        },
        "category1": Object {
          "fields": Object {},
          "name": "initial category",
        },
      },
      "generalAbilityCategories": Array [],
      "genericOccupation": "",
      "investigativeAbilityCategories": Array [],
      "longNotes": Array [],
      "migrationFlags": Object {
        "actor": Object {},
        "compendium": Object {},
        "item": Object {},
        "journal": Object {},
        "macro": Object {},
        "playlist": Object {},
        "rollTable": Object {},
        "scene": Object {},
        "world": Object {},
      },
      "mwHiddenShortNotes": Array [],
      "mwUseAlternativeItemTypes": false,
      "newNPCPacks": Array [],
      "newPCPacks": Array [],
      "npcStats": Object {
        "npcStat0": Object {
          "default": 3,
          "max": 10,
          "min": 0,
          "name": "NPC Statisitic Zero",
        },
      },
      "occupationLabel": "",
      "pcStats": Object {
        "pcStat0": Object {
          "default": 3,
          "max": 10,
          "min": 0,
          "name": "PC Statisitic Zero",
        },
      },
      "personalDetails": Array [],
      "shortNotes": Array [],
      "showEmptyInvestigativeCategories": false,
      "systemMigrationVersion": "",
      "systemPreset": "dnd5e",
      "useBoost": false,
      "useMwInjuryStatus": false,
      "useMwStyleAbilities": false,
      "useNpcCombatBonuses": false,
      "useTurnPassingInitiative": false,
    },
  }"
`;

exports[`reducer should delete a stat 1`] = `
"- Expected
+ Received

  Object {
    "settings": Object {
      "abilityCategories": "",
      "combatAbilities": Array [],
      "customThemePath": "",
      "debugTranslations": false,
      "defaultThemeName": "",
      "equipmentCategories": Object {
        "category0": Object {
          "fields": Object {
            "field0": Object {
              "default": "default value",
              "name": "Initial field",
              "type": "string",
            },
            "field1": Object {
              "default": "default value",
              "name": "Initial field",
              "type": "string",
            },
          },
          "name": "initial category",
        },
        "category1": Object {
          "fields": Object {},
          "name": "initial category",
        },
      },
      "generalAbilityCategories": Array [],
      "genericOccupation": "",
      "investigativeAbilityCategories": Array [],
      "longNotes": Array [],
      "migrationFlags": Object {
        "actor": Object {},
        "compendium": Object {},
        "item": Object {},
        "journal": Object {},
        "macro": Object {},
        "playlist": Object {},
        "rollTable": Object {},
        "scene": Object {},
        "world": Object {},
      },
      "mwHiddenShortNotes": Array [],
      "mwUseAlternativeItemTypes": false,
      "newNPCPacks": Array [],
      "newPCPacks": Array [],
      "npcStats": Object {
        "npcStat0": Object {
          "default": 3,
          "max": 10,
          "min": 0,
          "name": "NPC Statisitic Zero",
        },
      },
      "occupationLabel": "",
-     "pcStats": Object {
-       "pcStat0": Object {
-         "default": 3,
-         "max": 10,
-         "min": 0,
-         "name": "PC Statisitic Zero",
-       },
-     },
+     "pcStats": Object {},
      "personalDetails": Array [],
      "shortNotes": Array [],
      "showEmptyInvestigativeCategories": false,
      "systemMigrationVersion": "",
      "systemPreset": "dnd5e",
      "useBoost": false,
      "useMwInjuryStatus": false,
      "useMwStyleAbilities": false,
      "useNpcCombatBonuses": false,
      "useTurnPassingInitiative": false,
    },
  }"
`;

exports[`reducer should move a category down 1`] = `"Compared values have no visual difference."`;

exports[`reducer should move a category up 1`] = `"Compared values have no visual difference."`;

exports[`reducer should move a field down 1`] = `"Compared values have no visual difference."`;

exports[`reducer should move a field up 1`] = `"Compared values have no visual difference."`;

exports[`reducer should rename a category 1`] = `
"- Expected
+ Received

  Object {
    "settings": Object {
      "abilityCategories": "",
      "combatAbilities": Array [],
      "customThemePath": "",
      "debugTranslations": false,
      "defaultThemeName": "",
      "equipmentCategories": Object {
        "category0": Object {
          "fields": Object {
            "field0": Object {
              "default": "default value",
              "name": "Initial field",
              "type": "string",
            },
            "field1": Object {
              "default": "default value",
              "name": "Initial field",
              "type": "string",
            },
          },
-         "name": "initial category",
+         "name": "foo",
        },
        "category1": Object {
          "fields": Object {},
          "name": "initial category",
        },
      },
      "generalAbilityCategories": Array [],
      "genericOccupation": "",
      "investigativeAbilityCategories": Array [],
      "longNotes": Array [],
      "migrationFlags": Object {
        "actor": Object {},
        "compendium": Object {},
        "item": Object {},
        "journal": Object {},
        "macro": Object {},
        "playlist": Object {},
        "rollTable": Object {},
        "scene": Object {},
        "world": Object {},
      },
      "mwHiddenShortNotes": Array [],
      "mwUseAlternativeItemTypes": false,
      "newNPCPacks": Array [],
      "newPCPacks": Array [],
      "npcStats": Object {
        "npcStat0": Object {
          "default": 3,
          "max": 10,
          "min": 0,
          "name": "NPC Statisitic Zero",
        },
      },
      "occupationLabel": "",
      "pcStats": Object {
        "pcStat0": Object {
          "default": 3,
          "max": 10,
          "min": 0,
          "name": "PC Statisitic Zero",
        },
      },
      "personalDetails": Array [],
      "shortNotes": Array [],
      "showEmptyInvestigativeCategories": false,
      "systemMigrationVersion": "",
      "systemPreset": "dnd5e",
      "useBoost": false,
      "useMwInjuryStatus": false,
      "useMwStyleAbilities": false,
      "useNpcCombatBonuses": false,
      "useTurnPassingInitiative": false,
    },
  }"
`;

exports[`reducer should rename a field 1`] = `
"- Expected
+ Received

  Object {
    "settings": Object {
      "abilityCategories": "",
      "combatAbilities": Array [],
      "customThemePath": "",
      "debugTranslations": false,
      "defaultThemeName": "",
      "equipmentCategories": Object {
        "category0": Object {
          "fields": Object {
            "field0": Object {
              "default": "default value",
-             "name": "Initial field",
+             "name": "foo",
              "type": "string",
            },
            "field1": Object {
              "default": "default value",
              "name": "Initial field",
              "type": "string",
            },
          },
          "name": "initial category",
        },
        "category1": Object {
          "fields": Object {},
          "name": "initial category",
        },
      },
      "generalAbilityCategories": Array [],
      "genericOccupation": "",
      "investigativeAbilityCategories": Array [],
      "longNotes": Array [],
      "migrationFlags": Object {
        "actor": Object {},
        "compendium": Object {},
        "item": Object {},
        "journal": Object {},
        "macro": Object {},
        "playlist": Object {},
        "rollTable": Object {},
        "scene": Object {},
        "world": Object {},
      },
      "mwHiddenShortNotes": Array [],
      "mwUseAlternativeItemTypes": false,
      "newNPCPacks": Array [],
      "newPCPacks": Array [],
      "npcStats": Object {
        "npcStat0": Object {
          "default": 3,
          "max": 10,
          "min": 0,
          "name": "NPC Statisitic Zero",
        },
      },
      "occupationLabel": "",
      "pcStats": Object {
        "pcStat0": Object {
          "default": 3,
          "max": 10,
          "min": 0,
          "name": "PC Statisitic Zero",
        },
      },
      "personalDetails": Array [],
      "shortNotes": Array [],
      "showEmptyInvestigativeCategories": false,
      "systemMigrationVersion": "",
      "systemPreset": "dnd5e",
      "useBoost": false,
      "useMwInjuryStatus": false,
      "useMwStyleAbilities": false,
      "useNpcCombatBonuses": false,
      "useTurnPassingInitiative": false,
    },
  }"
`;

exports[`reducer should set a field default 1`] = `
"- Expected
+ Received

  Object {
    "settings": Object {
      "abilityCategories": "",
      "combatAbilities": Array [],
      "customThemePath": "",
      "debugTranslations": false,
      "defaultThemeName": "",
      "equipmentCategories": Object {
        "category0": Object {
          "fields": Object {
            "field0": Object {
-             "default": "default value",
+             "default": "foo",
              "name": "Initial field",
              "type": "string",
            },
            "field1": Object {
              "default": "default value",
              "name": "Initial field",
              "type": "string",
            },
          },
          "name": "initial category",
        },
        "category1": Object {
          "fields": Object {},
          "name": "initial category",
        },
      },
      "generalAbilityCategories": Array [],
      "genericOccupation": "",
      "investigativeAbilityCategories": Array [],
      "longNotes": Array [],
      "migrationFlags": Object {
        "actor": Object {},
        "compendium": Object {},
        "item": Object {},
        "journal": Object {},
        "macro": Object {},
        "playlist": Object {},
        "rollTable": Object {},
        "scene": Object {},
        "world": Object {},
      },
      "mwHiddenShortNotes": Array [],
      "mwUseAlternativeItemTypes": false,
      "newNPCPacks": Array [],
      "newPCPacks": Array [],
      "npcStats": Object {
        "npcStat0": Object {
          "default": 3,
          "max": 10,
          "min": 0,
          "name": "NPC Statisitic Zero",
        },
      },
      "occupationLabel": "",
      "pcStats": Object {
        "pcStat0": Object {
          "default": 3,
          "max": 10,
          "min": 0,
          "name": "PC Statisitic Zero",
        },
      },
      "personalDetails": Array [],
      "shortNotes": Array [],
      "showEmptyInvestigativeCategories": false,
      "systemMigrationVersion": "",
      "systemPreset": "dnd5e",
      "useBoost": false,
      "useMwInjuryStatus": false,
      "useMwStyleAbilities": false,
      "useNpcCombatBonuses": false,
      "useTurnPassingInitiative": false,
    },
  }"
`;

exports[`reducer should set a field maximum 1`] = `"Compared values have no visual difference."`;

exports[`reducer should set a field minimum 1`] = `"Compared values have no visual difference."`;

exports[`reducer should set a field type 1`] = `
"- Expected
+ Received

  Object {
    "settings": Object {
      "abilityCategories": "",
      "combatAbilities": Array [],
      "customThemePath": "",
      "debugTranslations": false,
      "defaultThemeName": "",
      "equipmentCategories": Object {
        "category0": Object {
          "fields": Object {
            "field0": Object {
-             "default": "default value",
+             "default": 0,
              "name": "Initial field",
-             "type": "string",
+             "type": "number",
            },
            "field1": Object {
              "default": "default value",
              "name": "Initial field",
              "type": "string",
            },
          },
          "name": "initial category",
        },
        "category1": Object {
          "fields": Object {},
          "name": "initial category",
        },
      },
      "generalAbilityCategories": Array [],
      "genericOccupation": "",
      "investigativeAbilityCategories": Array [],
      "longNotes": Array [],
      "migrationFlags": Object {
        "actor": Object {},
        "compendium": Object {},
        "item": Object {},
        "journal": Object {},
        "macro": Object {},
        "playlist": Object {},
        "rollTable": Object {},
        "scene": Object {},
        "world": Object {},
      },
      "mwHiddenShortNotes": Array [],
      "mwUseAlternativeItemTypes": false,
      "newNPCPacks": Array [],
      "newPCPacks": Array [],
      "npcStats": Object {
        "npcStat0": Object {
          "default": 3,
          "max": 10,
          "min": 0,
          "name": "NPC Statisitic Zero",
        },
      },
      "occupationLabel": "",
      "pcStats": Object {
        "pcStat0": Object {
          "default": 3,
          "max": 10,
          "min": 0,
          "name": "PC Statisitic Zero",
        },
      },
      "personalDetails": Array [],
      "shortNotes": Array [],
      "showEmptyInvestigativeCategories": false,
      "systemMigrationVersion": "",
      "systemPreset": "dnd5e",
      "useBoost": false,
      "useMwInjuryStatus": false,
      "useMwStyleAbilities": false,
      "useNpcCombatBonuses": false,
      "useTurnPassingInitiative": false,
    },
  }"
`;

exports[`reducer should set a stat default 1`] = `
"- Expected
+ Received

  Object {
    "settings": Object {
      "abilityCategories": "",
      "combatAbilities": Array [],
      "customThemePath": "",
      "debugTranslations": false,
      "defaultThemeName": "",
      "equipmentCategories": Object {
        "category0": Object {
          "fields": Object {
            "field0": Object {
              "default": "default value",
              "name": "Initial field",
              "type": "string",
            },
            "field1": Object {
              "default": "default value",
              "name": "Initial field",
              "type": "string",
            },
          },
          "name": "initial category",
        },
        "category1": Object {
          "fields": Object {},
          "name": "initial category",
        },
      },
      "generalAbilityCategories": Array [],
      "genericOccupation": "",
      "investigativeAbilityCategories": Array [],
      "longNotes": Array [],
      "migrationFlags": Object {
        "actor": Object {},
        "compendium": Object {},
        "item": Object {},
        "journal": Object {},
        "macro": Object {},
        "playlist": Object {},
        "rollTable": Object {},
        "scene": Object {},
        "world": Object {},
      },
      "mwHiddenShortNotes": Array [],
      "mwUseAlternativeItemTypes": false,
      "newNPCPacks": Array [],
      "newPCPacks": Array [],
      "npcStats": Object {
        "npcStat0": Object {
          "default": 3,
          "max": 10,
          "min": 0,
          "name": "NPC Statisitic Zero",
        },
      },
      "occupationLabel": "",
      "pcStats": Object {
        "pcStat0": Object {
-         "default": 3,
+         "default": 1,
          "max": 10,
          "min": 0,
          "name": "PC Statisitic Zero",
        },
      },
      "personalDetails": Array [],
      "shortNotes": Array [],
      "showEmptyInvestigativeCategories": false,
      "systemMigrationVersion": "",
      "systemPreset": "dnd5e",
      "useBoost": false,
      "useMwInjuryStatus": false,
      "useMwStyleAbilities": false,
      "useNpcCombatBonuses": false,
      "useTurnPassingInitiative": false,
    },
  }"
`;

exports[`reducer should set a stat id 1`] = `
"- Expected
+ Received

  Object {
    "settings": Object {
      "abilityCategories": "",
      "combatAbilities": Array [],
      "customThemePath": "",
      "debugTranslations": false,
      "defaultThemeName": "",
      "equipmentCategories": Object {
        "category0": Object {
          "fields": Object {
            "field0": Object {
              "default": "default value",
              "name": "Initial field",
              "type": "string",
            },
            "field1": Object {
              "default": "default value",
              "name": "Initial field",
              "type": "string",
            },
          },
          "name": "initial category",
        },
        "category1": Object {
          "fields": Object {},
          "name": "initial category",
        },
      },
      "generalAbilityCategories": Array [],
      "genericOccupation": "",
      "investigativeAbilityCategories": Array [],
      "longNotes": Array [],
      "migrationFlags": Object {
        "actor": Object {},
        "compendium": Object {},
        "item": Object {},
        "journal": Object {},
        "macro": Object {},
        "playlist": Object {},
        "rollTable": Object {},
        "scene": Object {},
        "world": Object {},
      },
      "mwHiddenShortNotes": Array [],
      "mwUseAlternativeItemTypes": false,
      "newNPCPacks": Array [],
      "newPCPacks": Array [],
      "npcStats": Object {
        "npcStat0": Object {
          "default": 3,
          "max": 10,
          "min": 0,
          "name": "NPC Statisitic Zero",
        },
      },
      "occupationLabel": "",
      "pcStats": Object {
-       "pcStat0": Object {
+       "foo": Object {
          "default": 3,
          "max": 10,
          "min": 0,
          "name": "PC Statisitic Zero",
        },
      },
      "personalDetails": Array [],
      "shortNotes": Array [],
      "showEmptyInvestigativeCategories": false,
      "systemMigrationVersion": "",
      "systemPreset": "dnd5e",
      "useBoost": false,
      "useMwInjuryStatus": false,
      "useMwStyleAbilities": false,
      "useNpcCombatBonuses": false,
      "useTurnPassingInitiative": false,
    },
  }"
`;

exports[`reducer should set a stat maximum 1`] = `
"- Expected
+ Received

  Object {
    "settings": Object {
      "abilityCategories": "",
      "combatAbilities": Array [],
      "customThemePath": "",
      "debugTranslations": false,
      "defaultThemeName": "",
      "equipmentCategories": Object {
        "category0": Object {
          "fields": Object {
            "field0": Object {
              "default": "default value",
              "name": "Initial field",
              "type": "string",
            },
            "field1": Object {
              "default": "default value",
              "name": "Initial field",
              "type": "string",
            },
          },
          "name": "initial category",
        },
        "category1": Object {
          "fields": Object {},
          "name": "initial category",
        },
      },
      "generalAbilityCategories": Array [],
      "genericOccupation": "",
      "investigativeAbilityCategories": Array [],
      "longNotes": Array [],
      "migrationFlags": Object {
        "actor": Object {},
        "compendium": Object {},
        "item": Object {},
        "journal": Object {},
        "macro": Object {},
        "playlist": Object {},
        "rollTable": Object {},
        "scene": Object {},
        "world": Object {},
      },
      "mwHiddenShortNotes": Array [],
      "mwUseAlternativeItemTypes": false,
      "newNPCPacks": Array [],
      "newPCPacks": Array [],
      "npcStats": Object {
        "npcStat0": Object {
          "default": 3,
          "max": 10,
          "min": 0,
          "name": "NPC Statisitic Zero",
        },
      },
      "occupationLabel": "",
      "pcStats": Object {
        "pcStat0": Object {
          "default": 3,
-         "max": 10,
+         "max": 1,
          "min": 0,
          "name": "PC Statisitic Zero",
        },
      },
      "personalDetails": Array [],
      "shortNotes": Array [],
      "showEmptyInvestigativeCategories": false,
      "systemMigrationVersion": "",
      "systemPreset": "dnd5e",
      "useBoost": false,
      "useMwInjuryStatus": false,
      "useMwStyleAbilities": false,
      "useNpcCombatBonuses": false,
      "useTurnPassingInitiative": false,
    },
  }"
`;

exports[`reducer should set a stat minimum 1`] = `
"- Expected
+ Received

  Object {
    "settings": Object {
      "abilityCategories": "",
      "combatAbilities": Array [],
      "customThemePath": "",
      "debugTranslations": false,
      "defaultThemeName": "",
      "equipmentCategories": Object {
        "category0": Object {
          "fields": Object {
            "field0": Object {
              "default": "default value",
              "name": "Initial field",
              "type": "string",
            },
            "field1": Object {
              "default": "default value",
              "name": "Initial field",
              "type": "string",
            },
          },
          "name": "initial category",
        },
        "category1": Object {
          "fields": Object {},
          "name": "initial category",
        },
      },
      "generalAbilityCategories": Array [],
      "genericOccupation": "",
      "investigativeAbilityCategories": Array [],
      "longNotes": Array [],
      "migrationFlags": Object {
        "actor": Object {},
        "compendium": Object {},
        "item": Object {},
        "journal": Object {},
        "macro": Object {},
        "playlist": Object {},
        "rollTable": Object {},
        "scene": Object {},
        "world": Object {},
      },
      "mwHiddenShortNotes": Array [],
      "mwUseAlternativeItemTypes": false,
      "newNPCPacks": Array [],
      "newPCPacks": Array [],
      "npcStats": Object {
        "npcStat0": Object {
          "default": 3,
          "max": 10,
          "min": 0,
          "name": "NPC Statisitic Zero",
        },
      },
      "occupationLabel": "",
      "pcStats": Object {
        "pcStat0": Object {
          "default": 3,
          "max": 10,
-         "min": 0,
+         "min": 1,
          "name": "PC Statisitic Zero",
        },
      },
      "personalDetails": Array [],
      "shortNotes": Array [],
      "showEmptyInvestigativeCategories": false,
      "systemMigrationVersion": "",
      "systemPreset": "dnd5e",
      "useBoost": false,
      "useMwInjuryStatus": false,
      "useMwStyleAbilities": false,
      "useNpcCombatBonuses": false,
      "useTurnPassingInitiative": false,
    },
  }"
`;

exports[`reducer should set a stat name 1`] = `
"- Expected
+ Received

  Object {
    "settings": Object {
      "abilityCategories": "",
      "combatAbilities": Array [],
      "customThemePath": "",
      "debugTranslations": false,
      "defaultThemeName": "",
      "equipmentCategories": Object {
        "category0": Object {
          "fields": Object {
            "field0": Object {
              "default": "default value",
              "name": "Initial field",
              "type": "string",
            },
            "field1": Object {
              "default": "default value",
              "name": "Initial field",
              "type": "string",
            },
          },
          "name": "initial category",
        },
        "category1": Object {
          "fields": Object {},
          "name": "initial category",
        },
      },
      "generalAbilityCategories": Array [],
      "genericOccupation": "",
      "investigativeAbilityCategories": Array [],
      "longNotes": Array [],
      "migrationFlags": Object {
        "actor": Object {},
        "compendium": Object {},
        "item": Object {},
        "journal": Object {},
        "macro": Object {},
        "playlist": Object {},
        "rollTable": Object {},
        "scene": Object {},
        "world": Object {},
      },
      "mwHiddenShortNotes": Array [],
      "mwUseAlternativeItemTypes": false,
      "newNPCPacks": Array [],
      "newPCPacks": Array [],
      "npcStats": Object {
        "npcStat0": Object {
          "default": 3,
          "max": 10,
          "min": 0,
          "name": "NPC Statisitic Zero",
        },
      },
      "occupationLabel": "",
      "pcStats": Object {
        "pcStat0": Object {
          "default": 3,
          "max": 10,
          "min": 0,
-         "name": "PC Statisitic Zero",
+         "name": "foo",
        },
      },
      "personalDetails": Array [],
      "shortNotes": Array [],
      "showEmptyInvestigativeCategories": false,
      "systemMigrationVersion": "",
      "systemPreset": "dnd5e",
      "useBoost": false,
      "useMwInjuryStatus": false,
      "useMwStyleAbilities": false,
      "useNpcCombatBonuses": false,
      "useTurnPassingInitiative": false,
    },
  }"
`;

exports[`reducer should set a value using setSome 1`] = `
"- Expected
+ Received

  Object {
    "settings": Object {
      "abilityCategories": "",
      "combatAbilities": Array [],
      "customThemePath": "",
      "debugTranslations": false,
      "defaultThemeName": "",
      "equipmentCategories": Object {
        "category0": Object {
          "fields": Object {
            "field0": Object {
              "default": "default value",
              "name": "Initial field",
              "type": "string",
            },
            "field1": Object {
              "default": "default value",
              "name": "Initial field",
              "type": "string",
            },
          },
          "name": "initial category",
        },
        "category1": Object {
          "fields": Object {},
          "name": "initial category",
        },
      },
      "generalAbilityCategories": Array [],
-     "genericOccupation": "",
+     "genericOccupation": "foo",
      "investigativeAbilityCategories": Array [],
      "longNotes": Array [],
      "migrationFlags": Object {
        "actor": Object {},
        "compendium": Object {},
        "item": Object {},
        "journal": Object {},
        "macro": Object {},
        "playlist": Object {},
        "rollTable": Object {},
        "scene": Object {},
        "world": Object {},
      },
      "mwHiddenShortNotes": Array [],
      "mwUseAlternativeItemTypes": false,
      "newNPCPacks": Array [],
      "newPCPacks": Array [],
      "npcStats": Object {
        "npcStat0": Object {
          "default": 3,
          "max": 10,
          "min": 0,
          "name": "NPC Statisitic Zero",
        },
      },
      "occupationLabel": "",
      "pcStats": Object {
        "pcStat0": Object {
          "default": 3,
          "max": 10,
          "min": 0,
          "name": "PC Statisitic Zero",
        },
      },
      "personalDetails": Array [],
      "shortNotes": Array [],
      "showEmptyInvestigativeCategories": false,
      "systemMigrationVersion": "",
      "systemPreset": "dnd5e",
      "useBoost": false,
      "useMwInjuryStatus": false,
      "useMwStyleAbilities": false,
      "useNpcCombatBonuses": false,
      "useTurnPassingInitiative": false,
    },
  }"
`;
